# vs_camplayer

./: .gitmodules  Readme.md  build_app.sh  build_libevent.sh  build_opencv.sh  build_qt.sh  create_app.sh  start.sh
src/: CLAUDE.md  CMakeLists.txt  ImageProvider.cpp  ImageProvider.h  Logger.h  NetworkClient.cpp  NetworkClient.h  main.cpp  main.qml  qml.qrc  utils.h
